# djangoplay-web

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.develop.md  README.md  pyproject.toml
.gitlab/ci/: deploy.yml  github-mirror.yml
backend/: CHANGELOG.md  LICENSE.md  consolidated_files.py  manage.py  requirements.txt  schema.yaml
backend/apidocs/: admin.py  apps.py  hooks.py  signals.py  urls.py
backend/apidocs/migrations/: 0001_initial.py  0002_apirequestlog_is_public_api.py  0003_rename_ip_address_apirequestlog_client_ip.py
backend/apidocs/models/: apirequestlog.py
backend/apidocs/templates/: api_stats_private.html  api_stats_public.html
backend/apidocs/utils/: base_schema.py  helper.py  querysanitizer.py  response_decorator.py
backend/apidocs/views/: __init__.py  api_stats.py  redoc.py  spectacular.py  swagger.py
backend/audit/: __init__.py  admin.py  apps.py  constants.py
backend/audit/contracts/: __init__.py  actor.py  target.py
backend/audit/middleware/: api_audit.py
backend/audit/migrations/: 0001_initial.py  0002_alter_auditevent_options.py
backend/audit/models/: __init__.py  audit_event.py
backend/audit/services/: __init__.py  normalizer.py  recorder.py
backend/audit/signals/: events.py  lifecycle.py
backend/clients/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/clients/migrations/: 0001_initial.py  0002_populate_clients.py  0003_populate_client_organizations_and_dates.py
backend/clients/tests/: test.py  test_models.py
backend/core/: admin_mixins.py  middleware.py  models.py  permissions.py  request_context.py  views_mixins.py
backend/core/middleware/: __init__.py  api_request_logging.py  client_ip.py  request_id.py  template_syntax.py  url_resolution_debug.py
backend/core/models/: AuditFieldsModel.py  LifecycleModel.py  __init__.py
backend/core/tests/: test_middleware.py  test_models.py  test_models_definitions.py  test_utils.py
backend/core/utils/: cmd_status.py  get_ip.py  redis_client.py
backend/devtools/: apps.py  tasks.py
backend/entities/: admin.py  apps.py  constants.py  exceptions.py  permissions.py  signals.py  urls.py
backend/entities/migrations/: 0001_initial.py  0002_initial.py  0003_historicalentity.py  0004_alter_entity_options_alter_historicalentity_options.py
backend/entities/models/: entity.py
backend/fincore/: admin.py  apps.py  constants.py  exceptions.py  permissions.py  signals.py  urls.py
backend/fincore/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_historicaladdress_historicalcontact_and_more.py
backend/fincore/models/: __init__.py  address.py  contact.py  entity_mapping.py  tax_profile.py
backend/frontend/: urls.py
backend/frontend/forms/: password_reset.py  report_bug.py  support.py
backend/frontend/templatetags/: actions.py  django_message_utils.py
backend/frontend/views/: __init__.py  auth.py  dashboard.py  errors.py  license.py  login.py  logout.py  manual_signup.py  manual_verify_email.py  password_reset.py  report_bug.py  resend_verification.py  sso_onboarding.py  support.py  unsubscribe.py  verify.py
backend/helpdesk/: urls.py
backend/helpdesk/adapters/: issue_adapter.py
backend/helpdesk/admin/: __init__.py  bug_report.py  file_upload.py  support.py
backend/helpdesk/forms/: __init__.py  bug_report.py  support.py
backend/helpdesk/migrations/: 0001_initial.py  0002_bugreport_emails_sent_and_more.py  0003_bugreport_migrated_issue_id_and_more.py
backend/helpdesk/models/: __init__.py  bug_report.py  enums.py  file_upload.py  support.py
backend/helpdesk/serializers/: __init__.py
backend/helpdesk/services/: __init__.py  bug_report_service.py  support_ticket_service.py
backend/industries/: admin.py  dump_industry_data.py  exceptions.py  serializers.py  urls.py
backend/industries/forms/: industries.py
backend/industries/migrations/: 0001_initial.py  0002_initial.py  0003_historicalindustry.py
backend/industries/models/: __init__.py  industry.py
backend/industries/views/: details.py  list_views.py  viewsets.py
backend/invoices/: admin.py  constants.py  exceptions.py  invoices.json  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/invoices/forms/: __init__.py  billing_schedule.py  gst_configuration.py  invoice.py  (+4 more)
backend/locations/: admin.py  exceptions.py  forms.py  models.py  permissions.py  signals.py  urls.py  validators.py
backend/mailer/: __init__.py  tasks.py
backend/paystream/: __init__.py  apps.py  asgi.py  celery.py  hosts.py  settings.py  urls.py  wsgi.py
backend/policyengine/: __init__.py  apps.py  models.py
backend/teamcentral/: apps.py  urls.py
backend/users/: admin.py  apps.py  constants.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/utilities/: apps.py  tasks.py
docs/adr/: 0001-identity-boundary-and-token-access.md
docs/debug/: DRF_required_default_AssertionError.markdown  Issues-and-Fixes-for-LeaveApplication.md  ServerUnreachableErrorOnBugReportSubmit.md  Swagger_ReDoc_Integration_Fix.md
docs/design/: DjangoAdminNotes.md  cachekeys.sh  configure-https.markdown  country_categories.md  render.md
docs/diagrams/: architecture.md  backend-component-map.md  frontend-component-map.md
docs/refactors/: account_verification.md  auth_email_dry_architecture.md  email_unsubscribe_and_email_messaging.md  entities_fincore_serializers_api_architecture.md  invoices_serializers_api_architecture.md.md  locations_serializers_api_architecture.md  password_reset_flow.md  users_account_verification_token.md  users_address.md  users_serializers_api_architecture.md
docs/system/: architecture.md  audit-system.md  identity-and-permissions.md  issue-tracker.md  mailer.md  security.md
scripts/: deploy.sh  generate_change_summary.py  migration.sh
scripts/cert/: .generate_dev_cert.ps1  .generate_dev_cert.sh
scripts/support/: debug_serializers.py  generate_change_summary.py  generate_logo.py  generic_fix_cicular_imports.py  git-release-summary.py
(+956 files in other folders)
