[project]
name = "djangoplay"
version = "0.3.0"
description = "DjangoPlay is a modular, enterprise-grade backend platform built with Django and Django REST Framework, designed for internal organizational systems where identity, permissions, auditability, and correctness are first-class concerns. It is intentionally structured to support long-lived systems, regulatory requirements, and complex organizational workflows."
authors = [
    { name = "Shekhar Bhosale", email = "vbgiyor@gmail.com" },
]
dependencies = [
    "Django>=4.2,<5.0",
    "djangorestframework>=3.14,<4.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-django>=4.5,<5.0",
    "black>=23.0,<24.0",
    "isort>=5.12,<6.0",
    "ruff>=0.7.0",
    "coverage>=7.3,<8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────
# FORMATTERS
# ─────────────────────────────────────────────

[tool.black]
line-length = 255
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 255
skip = ["migrations"]


# ─────────────────────────────────────────────
# RUFF
# ─────────────────────────────────────────────

[tool.ruff]
line-length = 255
target-version = "py310"

exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    "**/migrations/**",
    "devtools/commands/management/**",
]


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "TID", # flake8-tidy-imports (banned-api)
]

ignore = [
    "E203",  # Whitespace before ':'
    "E402",  # Module level import not at top of file
    "E501",  # Line too long

    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D211",
    "D212",
    "D400",
    "D401",
    "D415",
    "D417",

    "B904",
    "B007",

    "F401",
    "F403",
    "F405",
    "F811",
    "F821",

    "E722",
    "E902",
]

# ✅ THIS IS THE IMPORTANT FIX
# Allow banned-api imports *inside* users app
[tool.ruff.lint.per-file-ignores]
"backend/users/**" = ["TID251"]

# ─────────────────────────────────────────────
# flake8-tidy-imports
# ─────────────────────────────────────────────

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"


[tool.ruff.lint.flake8-tidy-imports.banned-api]
# ─────────────────────────────────────────────
# USERS APP — IDENTITY BOUNDARY ENFORCEMENT
# ─────────────────────────────────────────────

"users.models" = { msg = "❌ Do not import users.models outside users app. Use users.services or users.contracts." }
"users.models.employee" = { msg = "❌ Identity model access forbidden. Use identity services/contracts." }

"users.services.common" = { msg = "❌ Legacy mixed service. Use identity_* services only." }
"users.services.member" = { msg = "❌ Member logic moved to teamcentral." }
"users.services.employee" = { msg = "❌ Employee logic moved to teamcentral." }

# ─────────────────────────────────────────────
# RUFF FORMAT
# ─────────────────────────────────────────────

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
